# DeepAgentsSpec

./: .gitignore  AGENTS.md  Coding Agent 用 System Prompt テンプレート.md  Instructions1.md  Instructions2.md  PLANS.md  README.md  [見ないでください]ExecPlan Author Agent 用 System Prompt テンプレート.md  [見ないでください]Initializer Agent 用 System Prompt テンプレート.md  [見ないでください]Instructions1.md  [見ないでください]Instructions3.md  [見ないでください]Instructions4.md  [見ないでください]Instructions5.md  [見ないでください]Instructions6.md  [見ないでください]Instructions7.md  [見ないでください]アーキテクチャを提案してもらうプロンプト.md  pyproject.toml  temp_patch.patch  アーキテクチャを提案してもらうプロンプト.md
architecture/: deployment-topology.md  service-boundaries.md  system-architecture.md
architecture/diagrams/: README.md
docs/: [見ないでください]Julesの使い方.md  [見ないでください]私の秘密メモ.md  constitution.md  decisions.md  onboarding.md  operations.md
harness/: AI-Agent-progress.txt  claude-progress.txt  feature_list.json  harness-config.yaml  init.sh
plans/: README.md
plans/system/: EPIC-SYS-001-foundation.md
scripts/: format_or_lint.sh  run_all_e2e_tests.sh  run_all_unit_tests.sh  validate_plan.sh  validate_spec.sh
scripts/bash/: add-domain-checklist.sh  common.sh  (+6 more)
services/avatar-ui/server/: main.py  pyproject.toml  pytest.ini
services/avatar-ui/server/src/: config.py  diary_service.py  litellm_client.py  minirag_client.py  profile_service.py  profile_store.py
services/avatar-ui/server/src/ag_ui_adk/: __init__.py  adk_agent.py  client_proxy_toolset.py  endpoint.py  execution_state.py  session_manager.py
services/avatar-ui/server/src/ag_ui_adk/utils/: __init__.py
services/avatar-ui/server/src/routes/: diary.py
services/avatar-ui/server/tests/: test_adk_agent.py  test_event_translator_comprehensive.py  test_profile_merge.py  test_profiling_status.py  test_search_items.py  test_tool_result_flow.py
temp/: minirag_raw_response.json
templates/: checklist-template.md  jules-ai-issue-template.md  plan-template.md  spec-template.md  tasks-template.md
(+201 files in other folders)
